Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8173955/MessageForEnumTest.out
MessageForEnumTest.java:8:8: compiler.err.class.public.should.be.in.file: kindname.enum, MessageForEnumTest_
1 error
