Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8173955/MessageForEnumTest.java
/*
 * @test  /nodynamiccopyright/
 * @bug 8174027
 * @summary error message should adapt to the corresponding top level element
 * @compile/fail/ref=MessageForEnumTest.out -XDrawDiagnostics MessageForEnumTest.java
 */

public enum MessageForEnumTest_ {}
